# wd_lint_lad

./: Cargo.toml  README.md  SPEC.md
crates/wd-core/: Cargo.toml
crates/wd-core/src/: entity.rs  issue.rs  lang.rs  lib.rs  rules.rs  script.rs  text.rs
crates/wikidata-fix/: Cargo.toml
crates/wikidata-fix/src/: cli.rs  coalesce.rs  csv_out.rs  fixes.rs  main.rs
crates/wikidata-fix/tests/: integration.rs
crates/wikidata-fix/tests/fixtures/: dump.json  rules.json
crates/wikidata-fix/tests/snapshots/: integration__roundtrip_filtered_csv.snap  integration__roundtrip_filtered_unfixable.snap  integration__roundtrip_full_csv.snap  integration__roundtrip_full_unfixable.snap  integration__scanner_all_checks.snap
crates/wikidata-lint/: Cargo.toml
crates/wikidata-lint/src/: checks.rs  cli.rs  main.rs  matchers.rs  output.rs  pipeline.rs
crates/wikidata-lint/src/checks/: alias.rs  description.rs  label.rs  streaming.rs
rules/: en.json  example.json
