[workspace]
members = [
    "crates/wd-core",
    "crates/wikidata-lint",
    "crates/wikidata-fix",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/jamie-day-cox/wd_lint_lad"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
aho-corasick = "1"
crossbeam-channel = "0.5"
csv = "1"
anyhow = "1"
thiserror = "2"
unicode-properties = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
