[package]
name = "wikidata-fix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reads wikidata-lint JSONL and emits a QuickStatements v2 / CSV batch."

[[bin]]
name = "wikidata-fix"
path = "src/main.rs"

[dependencies]
wd-core = { path = "../wd-core" }
anyhow = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
insta = "1"
tempfile = "3"
